Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <section id="curriculo">
       <div class="curriculo-header">
-        <img src="Image/karen.jpg" class="curriculo-foto" />
+        <img src="karen.jpg" class="curriculo-foto" />
       </div>
 
       <!-- Abaixo você pode colocar seções como Formação, Habilidades, Certificações -->
@@ -115,3 +115,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
