Add CRM to soft skills section in index.html

--- a/index.html
+++ b/index.html
@@ -109,10 +109,12 @@
           <span>Adaptabilidade</span>
           <span>Atenção aos detalhes</span>
           <span>Autenticidade</span>
+          <span>CRM</span>
         </div>
       </section>
     </div>
     <script src="script.js"></script>
   </body>
 </html>
+
 
