--- a/index.html
+++ b/index.html
@@ -7,69 +7,42 @@
     <link rel="stylesheet" href="curriculo.css" />
   </head>
   <body>
-    <!-- Botão de tema -->
-
     <span class="theme-toggle" onclick="toggleTheme()">🌙</span>
 
-    <section id="curriculo">
-      <div class="curriculo-header">
-        <img src="karen.jpg" class="curriculo-foto" />
-      </div>
-
-      <!-- Abaixo você pode colocar seções como Formação, Habilidades, Certificações -->
-    </section>
-
     <div class="resume-container">
-      <!-- Cabeçalho -->
       <header>
         <h1>Karen Alexandra Marques</h1>
         <p class="title">
-          Estudante de Ciências da Computação | Desenvolvedora Web & Analista de
-          Dados
+          Estudante de Ciências da Computação | Desenvolvedora Web & Analista de Dados
         </p>
         <div class="contact-info">
           <span>📧 marques.dev@outlook.com.br</span>
           <span>📱 +55 14 99125-4673</span>
-          <span
-            >🌐
-            <a
-              href="https://www.linkedin.com/in/karen-alexandra-98a227349/"
-              target="_blank"
-              >LinkedIn</a
-            ></span
-          >
-          <span
-            >🌐
-            <a href="https://github.com/k-marques" target="_blank"
-              >GitHub</a
-            ></span
-          >
+          <span>🌐
+            <a href="https://www.linkedin.com/in/karen-alexandra-98a227349/" target="_blank">LinkedIn</a>
+          </span>
+          <span>🌐
+            <a href="https://github.com/k-marques" target="_blank">GitHub</a>
+          </span>
         </div>
       </header>
 
-      <!-- Perfil -->
       <section class="section">
         <h2>Perfil Profissional</h2>
         <p>
-          Profissional dedicada à criação de soluções digitais e análise de
-          dados, com foco em eficiência, persistência e aprendizado contínuo.
-          Busco oportunidades para desenvolver projetos que integrem tecnologia,
-          criatividade e resultados mensuráveis.
+          Profissional dedicada à criação de soluções digitais e análise de dados, com foco em eficiência,
+          persistência e aprendizado contínuo. Busco oportunidades para desenvolver projetos que integrem
+          tecnologia, criatividade e resultados mensuráveis.
         </p>
       </section>
 
-      <!-- Formação -->
       <section class="section">
         <h2>Formação Acadêmica</h2>
         <ul>
-          <li>
-            <strong>Ciências da Computação</strong> – Faculdade das Américas
-            (FAM), conclusão prevista 2028
-          </li>
+          <li><strong>Ciências da Computação</strong> – Faculdade das Américas (FAM), conclusão prevista 2028</li>
         </ul>
       </section>
 
-      <!-- Cursos -->
       <section class="section">
         <h2>Cursos e Certificações</h2>
         <ul>
@@ -81,7 +54,6 @@
         </ul>
       </section>
 
-      <!-- Hard Skills -->
       <section class="section">
         <h2>Hard Skills</h2>
         <div class="skills">
@@ -95,7 +67,6 @@
         </div>
       </section>
 
-      <!-- Soft Skills -->
       <section class="section">
         <h2>Soft Skills</h2>
         <div class="soft-skills">
@@ -104,18 +75,16 @@
           <span>Persistência</span>
           <span>Foco em resultados</span>
           <span>Comunicação clara</span>
-          <span>CRM</span>
           <span>Colaboração</span>
           <span>Curiosidade & Aprendizado contínuo</span>
           <span>Adaptabilidade</span>
           <span>Atenção aos detalhes</span>
           <span>Autenticidade</span>
+          <span>CRM</span>
         </div>
       </section>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
-
-
-
